--- a/public/index.html
+++ b/public/index.html
@@ -47,7 +47,7 @@
       </p>
       <a href="/hello-template?method=transform">/hello-html?method=transform</a>
     </div>
-    <img src="../cat.jpeg" alt="Cat">
-    <img src="../images/catDogOne.jpeg" alt="Cat">
+    <img src="/cat.jpeg" alt="Cat">
+    <img src="/images/catDogOne.jpeg" alt="dog">
   </body>
 </html>
