--- a/public/index.html
+++ b/public/index.html
@@ -49,5 +49,6 @@
     </div>
     <img src="/cat.jpeg" alt="Cat">
     <img src="/images/catDogOne.jpeg" alt="dog">
+    <img src="/myImages/girl.webp" alt="girl">
   </body>
 </html>
