--- a/public/index.html
+++ b/public/index.html
@@ -50,5 +50,7 @@
     <img src="/cat.jpeg" alt="Cat">
     <img src="/images/catDogOne.jpeg" alt="dog">
     <img src="/myImages/girl.webp" alt="girl">
+    <img src="https://plus.unsplash.com/premium_photo-1678112180202-cd950dbe5a35?q=80&w=300" alt="remote">
+
   </body>
 </html>
