images in parent folder

--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,12 @@
     </style>
   </head>
   <body>
+    <nav>
+      <ul>
+          <li><a href="../index.html">Home</a></li>
+          <li><a href="./about/index.html">About</a></li>
+      </ul>
+  </nav>
     <h1>Getting started with Netlify Edge Functions</h1>
     <p>Hello and welcome to the tutorial!</p>
     <p>This tutorial will take you through using Edge Functions on Netlify to build the following URLs:</p>
