rename files for cache bursting

--- a/public/index.html
+++ b/public/index.html
@@ -54,7 +54,7 @@
       <a href="/hello-template?method=transform">/hello-html?method=transform</a>
     </div>
     <img src="/cat.jpeg" alt="Cat">
-    <img src="/images/catDogOne.jpeg" alt="dog" width="400">
+    <img src="/images/catDog.jpeg" alt="dog" width="400">
     <img src="/myImages/girl.webp" alt="girl">
     <img src="https://plus.unsplash.com/premium_photo-1678112180202-cd950dbe5a35?q=80&w=300" width="500" alt="remote">
 
