--- a/public/about/index.html
+++ b/public/about/index.html
@@ -17,7 +17,7 @@
     </header>
     <main>
         <p>This is the about page of the website.</p>
-        <img src="../cat.jpeg" alt="Cat">
+        <img src="../catOne.jpeg" alt="Cat">
     </main>
     <footer>
         <p>&copy; 2024 My Website</p>
