--- a/public/index.html
+++ b/public/index.html
@@ -60,6 +60,11 @@
     src="./catOne.jpeg">
   <img src="/myImages/girl.webp" alt="girl">
   <img src="https://plus.unsplash.com/premium_photo-1678112180202-cd950dbe5a35?q=80&w=300" width="500" alt="remote">
+  <picture>
+    <source media="(max-width: 1024px)" srcset="./myImages/girl.webp" />
+    <source media="(min-width: 1024px)" srcset="./images/catDog.jpeg" />
+    <img src="./catOne.jpeg" alt="Cat" />
+  </picture>
 
 </body>
 
